<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFA0"
    tools:context=".presentation.feature.recipes.view.CreateRecipeFragment">


    <ImageButton
        android:id="@+id/back_to_favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/general_back_icon_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">


            <TextView
                android:id="@+id/recipe_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_recipe_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/textColor"
                app:boxStrokeColor="@color/dark_red"
                app:boxStrokeWidthFocused="2dp"
                app:cursorColor="@color/dark_red"
                app:hintTextColor="@color/dark_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_title_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipe_name_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredients_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/textColor"
                app:boxStrokeColor="@color/dark_red"
                app:boxStrokeWidthFocused="2dp"
                app:cursorColor="@color/dark_red"
                app:hintTextColor="@color/dark_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_name_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredients_edit"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:hint="@string/ingredients_hint"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instructions_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/textColor"
                app:boxStrokeColor="@color/dark_red"
                app:boxStrokeWidthFocused="2dp"
                app:cursorColor="@color/dark_red"
                app:hintTextColor="@color/dark_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instructions_edit"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="top"
                    android:hint="@string/instructions_hint"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/recipe_cooking_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cooking_time"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions_input" />

            <LinearLayout
                android:id="@+id/recipe_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_cooking_time_label">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/textColor"
                    app:boxStrokeColor="@color/dark_red"
                    app:boxStrokeWidthFocused="2dp"
                    app:cursorColor="@color/dark_red"
                    app:hintTextColor="@color/dark_red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recipe_cooking_time_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_in_minutes"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/minutes"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_time_container">

                <LinearLayout
                    android:id="@+id/complexity_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ratingBarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/complexity"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/instructions_input" />


                    <RatingBar
                        android:id="@+id/setComplexityRatingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:progressBackgroundTint="@color/dark_red"
                        android:progressTint="#EF6C00"
                        android:secondaryProgressTint="@color/dark_red"
                        android:stepSize="1"
                        android:theme="@style/RatingBar" />


                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/isPublicCheckbox"
                    style="@style/Widget.Material3.CompoundButton.CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/isPublicRecipe"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/light_pink"
                android:text="@string/save_recipe"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_container" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>