...
    <string name="do_cash_network_recipes">Кешировать сетевые рецепты</string>
    <string name="do_not_cash_network_recipes">Отменить кеширование рецептов</string>
    <string name="cook_method">Способ приготовления:</string>
    <string name="ingredients_label">Ингредиенты:</string>
    <string name="Selected">"Выбрано "</string>
    <string name="Fill_in_all_fields">Заполните все поля</string>
    <string name="Do_save_recipe">Сохранить рецепт?</string>
    <string name="sure_to_save">Вы уверены, что хотите сохранить этот рецепт?</string>
    <string name="Yes">Да</string>
    <string name="Save_successful">Рецепт сохранен!</string>
    <string name="Cancellation">Отмена</string>
    <string name="Post_code_again_after_seconds">Отправить код повторно через: %1$s с</string>
    <string name="Post_code_again">Отправить код повторно</string>
...
