...
        tools:layout="@layout/fragment_authorization" >
        <action
            android:id="@+id/action_authorizationFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_authorizationFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.paletteofflavors.presentation.auth.view.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" >
...
